# Playing-With-Graphics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Camera.hpp  CommonDefs.hpp  DebugDrawer.cpp  DebugDrawer.hpp  Entity.cpp  Entity.hpp  GameWorld.cpp  GameWorld.hpp  GraphicsObject.cpp  GraphicsObject.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  ShaderUtils.cpp  ShaderUtils.hpp  Util.hpp  gl_defs.hpp  main.cpp
DirectX/: CMakeLists.txt  winmain.cpp
OpenGL4/: CMakeLists.txt  Entity.cpp  GameWorld.cpp  OpenGL4Defs.hpp  OpenGLDebugDrawer.cpp  OpenGLDebugDrawer.hpp  ShaderUtils.cpp  main.cpp
cmake/: FindDirectX.cmake
glsl/bullet-debug/: vert.glsl
glsl/simple/: frag.glsl  vert.glsl
